force-app/main/default/objects/Vyuha_Log__c/Vyuha_Log__c.object-meta.xml
<CustomObject>
    <description>Execution log for Vyuha Tool</description>
    <label>Vyuha Log</label>
    <nameField>
        <displayFormat>VY-{00000}</displayFormat>
        <label>Vyuha Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vyuha Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>