force-app/main/default/objects/Vyuha_Log__c/fields/Apex_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Apex_Job_ID__c</fullName>
    <description>ID for Apex Job</description>
    <inlineHelpText>ID for Apex Job</inlineHelpText>
    <label>Apex Job ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>