force-app/main/default/objects/Vyuha_Log__c/fields/Flow_Interview_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_Interview_Name__c</fullName>
    <description>Executed Flow Interview Name</description>
    <inlineHelpText>Executed Flow Interview Name</inlineHelpText>
    <label>Flow Interview Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>