force-app/main/default/objects/Vyuha_Log__c/fields/Formation_ID__c.field-meta.xml
<CustomField>
    <fullName>Formation_ID__c</fullName>
    <description>Formation ID from Custom Metadata Type</description>
    <externalId>true</externalId>
    <inlineHelpText>Formation ID from Custom Metadata Type</inlineHelpText>
    <label>Formation ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>