force-app/main/default/objects/Vyuha_Log__c/fields/Formation_Name__c.field-meta.xml
<CustomField>
    <fullName>Formation_Name__c</fullName>
    <description>Name of Formation</description>
    <inlineHelpText>Name of Formation</inlineHelpText>
    <label>Formation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>