force-app/main/default/objects/Vyuha_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Log Message from processing</description>
    <inlineHelpText>Log Message from processing</inlineHelpText>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>