force-app/main/default/objects/Vyuha_Log__c/fields/Message_Long__c.field-meta.xml
<CustomField>
    <fullName>Message_Long__c</fullName>
    <label>Message Long</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>