force-app/main/default/objects/Vyuha_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Last known Status</description>
    <inlineHelpText>Last known Status</inlineHelpText>
    <label>Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>