force-app/main/default/objects/Vyuha_Log__c/fields/Vyuha_Formation__c.field-meta.xml
<CustomField>
    <fullName>Vyuha_Formation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Related Vyuha Formation for Log Entry</description>
    <inlineHelpText>Related Vyuha Formation for Log Entry</inlineHelpText>
    <label>Vyuha Formation</label>
    <referenceTo>Vyuha_Formation__c</referenceTo>
    <relationshipLabel>Vyuha Logs</relationshipLabel>
    <relationshipName>Vyuha_Logs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>