force-app/main/default/objects/Vyuha_Log__c/fields/Vyuha_Schedule_Item__c.field-meta.xml
<CustomField>
    <fullName>Vyuha_Schedule_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Schedule Item for Log Entry</description>
    <inlineHelpText>Related Schedule Item for Log Entry</inlineHelpText>
    <label>Vyuha Schedule Item</label>
    <referenceTo>Vyuha_Schedule_Item__c</referenceTo>
    <relationshipLabel>Vyuha Logs</relationshipLabel>
    <relationshipName>Vyuha_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>